--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first portfolio website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt ut nostrum accusantium ratione. Dolores sit officia cupiditate debitis necessitatibus est?</p>
+    <!-- This is nav bar Section -->
+    <header>
+      <nav>
+        <div class="container">
+            <div class="logo">
+                <img class="logo-img" src="./images/logo-light.png" alt="logo">
+            </div>
+
+            <div>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#"></a>home</li>
+                    <li class="menu-item"><a href=""></a>about</li>
+                    <li class="menu-item"><a href=""></a>services</li>
+                    <li class="menu-item"><a href=""></a>blog</li>
+                    <li class="menu-item"><a href=""></a>content</li>
+                </ul>
+            </div>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
