--- a/index.html
+++ b/index.html
@@ -8,25 +8,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- This is nav bar Section -->
     <header>
+        <!-- nav bar section start -->
       <nav>
-        <div class="container">
-            <div class="logo">
+        <div id="container">
+            <div>
                 <img class="logo-img" src="./images/logo-light.png" alt="logo">
             </div>
 
             <div>
                 <ul class="menu">
                     <li class="menu-item"><a href="#"></a>home</li>
-                    <li class="menu-item"><a href=""></a>about</li>
-                    <li class="menu-item"><a href=""></a>services</li>
-                    <li class="menu-item"><a href=""></a>blog</li>
-                    <li class="menu-item"><a href=""></a>content</li>
+                    <li class="menu-item"><a href="#"></a>about</li>
+                    <li class="menu-item"><a href="#"></a>services</li>
+                    <li class="menu-item"><a href="#"></a>blog</li>
+                    <li class="menu-item"><a href="#"></a>content</li>
                 </ul>
             </div>
         </div>
       </nav>
+      <!-- nav bar section end -->
+
+      <!-- hero section start -->
+      <section>
+        <div id="banner-container">
+            <div class="banner-text">
+                <h1 class="title">Better design for<br>your digital products</h1>
+            <p class="description">We are a creative studio specializing in UI/UX design, development and strategy.</p>
+            <button class="btn">Explore More</button>
+            </div>
+
+            <div class="banner-img">
+                <img class="banner-photo" src="./images/banner.png" alt="banner">
+            </div>
+            
+        </div>
+      </section>
+       <!-- hero section end -->
     </header>
     <main></main>
     <footer></footer>
