--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- hero section start -->
       <section>
         <div id="banner-container">
-            <div class="banner-text">
+            <div class="banner-title">
                 <h1 class="title">Better design for<br>your digital products</h1>
             <p class="description">We are a creative studio specializing in UI/UX design, development and strategy.</p>
             <button class="btn">Explore More</button>
@@ -46,7 +46,53 @@
       </section>
        <!-- hero section end -->
     </header>
-    <main></main>
+    <main>
+
+        <!-- about section start-->
+        <section>
+            <h2 class="about-title">About Us</h2>
+            <div id="about-container">
+                <div class="about-img">
+                    <img class="about-photo" src="./images/section.png" alt="about-image">
+                </div>
+                <div>
+                    <h3 class="about-sub-title">We grow brands through<br>
+                        bold & strategic creative</h3>
+                        <p class="about-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas illo, ut nulla quibusdam modi sint!</p>
+                        <button class="btn">Contact Us</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- about section end-->
+
+        <!-- services section start-->
+        <section>
+            <h3 class="service-title">Our Services</h3>
+            <div id="service-container">
+                <div class="box">
+                    <img class="box-icon" src="./icon/0.png" alt="">
+                    <h2 class="box-title">Web Deveopment</h2>
+                    <p class="box-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae necessitatibus quas reprehenderit ullam non qui expedita quia cum asperiores maiores?</p>
+                    <button class="box-btn">More Details</button>
+                </div>
+                <div class="box">
+                    <img class="box-icon" src="./icon/1.png" alt="">
+                    <h2 class="box-title">Digital Marketing</h2>
+                    <p class="box-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae necessitatibus quas reprehenderit ullam non qui expedita quia cum asperiores maiores?</p>
+                    <button class="box-btn">More Details</button>
+                </div>
+
+                <div class="box">
+                    <img class="box-icon" src="./icon/2.png" alt="">
+                    <h2 class="box-title">SEO Service</h2>
+                    <p class="box-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae necessitatibus quas reprehenderit ullam non qui expedita quia cum asperiores maiores?</p>
+                    <button class="box-btn">More Details</button>
+                </div>
+            </div>
+        </section>
+
+    </main>
     <footer></footer>
 </body>
 </html>
