--- a/index.html
+++ b/index.html
@@ -93,6 +93,44 @@
         </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <section>
+            <div id="footer-container">
+                <div class="logo-footer">
+                    <img class="logo-img" src="./images/logo-light.png" alt="footer-logo">
+                    <p class="footer-description">Auctor blandit dolorem primis eius <br>odit soluta molestie? Malesuada<br> elementum aut doloremque labo.
+                    </p>
+                </div>
+                    <div class="menu-link">
+                        <h4 class="footer-heading">Useful Links</h4>
+                        <li class="menu-link"><a href="#">About us</a></li>
+                        <li class="menu-link"><a href="#">Careers</a></li>
+                        <li class="menu-link"><a href="#">News & Artciles</a></li>
+                        <li class="menu-link"><a href="#">Legal Notice</a></li>
+                    </div>
+
+                    <div class="menu-link">
+                        <h4 class="footer-heading">Supports</h4>
+                        <li class="menu-link"><a href="#">Help Center</a></li>
+                        <li class="menu-link"><a href="#">Contact Us</a></li>
+                        <li class="menu-link"><a href="#">FAQ</a></li>
+                        <li class="menu-link"><a href="#">Parent Community</a></li>
+                    </div>
+
+                    <div class="menu-link">
+                        <h4 class="footer-heading">Contact Information</h4>
+                       <p class="footer-details">Feel free to contact & reach us !!</p>
+                       <p class="footer-details">3557 Derek Drive, Orlando, Florida</p>
+                       <p class="footer-details">+1(456)657-887</p>
+                       <p class="footer-details">info@domain.com</p>
+                    </div>
+            </div>
+        </section>
+        <hr>
+        <p class="copyright__text">
+            Copyright &copy; by Imran Hossain. All rights reserved.
+           </p>
+        </div>
+    </footer>
 </body>
 </html>
