added footer design

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
     </main>
     <footer>
-        <section>
+        <!-- footer section start -->
+        <section class="container">
             <div id="footer-container">
                 <div class="logo-footer">
                     <img class="logo-img" src="./images/logo-light.png" alt="footer-logo">
@@ -125,12 +126,12 @@
                        <p class="footer-details">info@domain.com</p>
                     </div>
             </div>
+                <hr class="line-bar"/>
+                    <p class="copy-text">
+                        <small>Copyright &copy; 2023 webimran. All rights reserved.</small>
+                    </p>
         </section>
-        <hr>
-        <p class="copyright__text">
-            Copyright &copy; by Imran Hossain. All rights reserved.
-           </p>
-        </div>
     </footer>
+    <!-- footer section end -->
 </body>
 </html>
